--- a/style.css
+++ b/style.css
@@ -440,9 +440,9 @@ header h1{
 	background-size:cover;
     background-color: black;
     background-position:center;
-	max-height: 100%;
+	height: 100vh;
 	max-width: 100%;
-        height: 760px;
+    
     
 }
     
@@ -452,7 +452,7 @@ header h1{
     float: left;
     margin: 85px 80px 0px 80px;
     padding:10px ;
-    margin: 85px 250px 0px 50px;
+    margin: 110px 250px 0px 50px;
     padding: 30px ;
     text-align:left;
     line-height: 7vw;
@@ -469,7 +469,7 @@ header h1{
 	background-repeat: no-repeat;
 	background-size:cover;
     background-color: black;
-	max-height: 20%;
+	 
 	max-width: 100%;
 
 }
@@ -510,7 +510,7 @@ header h1{
     grid-gap: 15px;
     margin: 70px 150px 80px 0px;
     padding: 0px 50px;
-
+    height: 100vh;
 }
 
 
@@ -520,8 +520,7 @@ header h1{
 }
      .price{
     width: 70%;
-    height: 350px;
-    height: 470px;
+    height: 60vh;
     border-radius: 50px;
     background-color: rgba(255,255,255,0.8);
     max-width: 70%;
@@ -534,7 +533,7 @@ header h1{
 }  
     
     .price-img{
-        height: 700px;
+        height: 100vh;
     }
     
         .price-head{
@@ -550,13 +549,11 @@ header h1{
     background-size: cover;
     background-blend-mode: normal;
     width: 70%;
-    height: 350px;
+    height: 60vh;
     border-radius: 50px;
     background-color: rgba(255,255,255,0.8);
     max-width: 70%;
-    margin: 0px 50px 0px 50px;
-    width: 70%;
-    margin: 50px 50px 20px 50px;
+    margin: 50px 50px 0px 50px;
     padding: 30px 0px 0px 30px;
     line-height: 35px;
     font-size: 4vw;
@@ -567,8 +564,8 @@ header h1{
 	background-repeat: no-repeat;
 	background-size:cover;
     background-color: black;
-    padding-bottom: 200px;
-	height: 100%;
+    padding-bottom: 0px;
+	height: 100vh;
 	max-width: 100%;
 
 }
